--- a/scss/_variables.scss
+++ b/scss/_variables.scss
@@ -27,6 +27,7 @@ $theme-colors: map-merge((
 $font-sizes: (
     72: 72px,
     60: 60px,
+    48: 48px,
     36: 36px,
     24: 24px,
     18: 18px,
@@ -141,3 +142,5 @@ $utilities: map-merge((
         )
     )
 ), $utilities);
+
+$enable-negative-margins: true;
