--- a/scss/_style.scss
+++ b/scss/_style.scss
@@ -146,7 +146,7 @@ section.banner {
 section.banner {
     background: $dark;
     padding: 119px 0 109px;
-    
+
     @include media-breakpoint-up(xl) {
         background: $dark imgUrl('banner.png') right center;
         background-size: contain;
@@ -159,7 +159,7 @@ section.banner {
 
 section.about {
     padding: 125px 0;
-    
+
     @include media-breakpoint-up(xl) {
         background: imgUrl('about.png') right center;
         background-size: contain;
@@ -273,10 +273,11 @@ section.form2 {
                 min-height: 50px;
                 display: flex;
                 align-items: center;
-                padding: 8px 27px;
+                padding: 8px;
                 color: $grey;
 
                 @include media-breakpoint-up(lg) {
+                    padding: 8px 27px;
                     min-height: 70px;
                 }
             }
