--- a/scss/_style.scss
+++ b/scss/_style.scss
@@ -315,10 +315,6 @@ section.services {
 
         .main {
             padding: 37px 24px 28px;
-            min-height: 163px;
-            display: flex;
-            flex-direction: column;
-            justify-content: space-between;
         }
     }
 }
@@ -339,10 +335,6 @@ footer {
         border-bottom: 1px solid $dark;
     }
 
-    .footer-links {
-        padding: 34px 0;
-    }
-
     .footer-links,
     .footer-accreditation {
         ul.quick-links {
@@ -360,7 +352,7 @@ footer {
     }
 
     .footer-accreditation {
-        padding-bottom: 69px;
+        padding: 45px 0 69px;
 
         #accreditation {
             .slick-track {
